# manager-product

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: connection.py  models.py
app/migrations/: env.py
app/migrations/versions/: 72dfcb7c828a_add.py  b6cd60f264e9_add.py  e4869e1d0ff8_add.py
app/routes/: category_routes.py  deps.py  product_routes.py  user_routes.py
app/schemas/: category.py  product.py  user.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py  test_user_routers.py  test_user_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py  test_user_schema.py
app/test/use_cases/: test_category_use_case.py  test_product_use_case.py  test_user_use_cases.py
app/use_cases/: category.py  product.py  user.py
