[tool.poetry]
name = "manager-product"
version = "0.1.0"
description = ""
authors = ["Jhonatan Azevedo <dev.azevedo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pytest = "^8.3.3"
alembic = "^1.13.3"
python-decouple = "^3.8"
httpx = "^0.27.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
